tests/fail/if_then_with_valued_expression.tig
if 1 then 1