tests/fail/if_then_with_valued_expression.err
Semantic Error: The then expression of the if-then statement at line 1 should not return a value.
